[package]
name = "DKG"
version = "0.1.0"
authors = ["iquerejeta <querejeta.azurmendi@iohk.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_core = { version = "0.5", default-features = false }
generic-array = "0.14"
blake2 = "0.9.1"
chacha20 = "0.7.2"
curve25519-dalek = "3"

[dev-dependencies]
rand = "0.7"
blake2 = "0.9"

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    "katex-header.html"
]
