[package]
name = "dkg"
version = "0.1.0"
authors = ["iquerejeta <querejeta.azurmendi@iohk.io>"]
edition = "2018"

[dependencies]
rand_core = { version = "0.5", default-features = false }
generic-array = "0.14"
blake2 = "0.9.1"
chacha20 = "0.7.2"
curve25519-dalek = "3"

[dev-dependencies]
rand = "0.7"
blake2 = "0.9"
derive_more = "0.99"
rand_chacha = "0.2"

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    "katex-header.html"
]
